--- a/src/app/post/view-post/view-post.component.css
+++ b/src/app/post/view-post/view-post.component.css
@@ -1,12 +1,11 @@
 .post-title {
   font-size: 28px;
   font-weight: bold;
-  opacity: 1;
 }
 
-.post-title:hover {
+/* .post-title:hover {
   opacity: 0.6;
-}
+} */
 
 .subreddit-text {
   font-weight: bold;
@@ -27,7 +26,7 @@
     margin-bottom: 10px;
     overflow: hidden;
     background-color: rgba(255,255,255,0.8);
-    color: #878A8C;
+    /* color: #878A8C; */
     position: relative;
     border-radius: 4px;
     padding:5px;
