--- a/src/app/shared/subreddit-side-bar/subreddit-side-bar.component.html
+++ b/src/app/shared/subreddit-side-bar/subreddit-side-bar.component.html
@@ -6,6 +6,6 @@
         <hr />
     </span>
     <div style="text-align: center" *ngIf="displayAll">
-        <a style="font-weight: bold" routerLink="/list-subreddits">View All</a>
+        <a style="font-weight: bold" routerLink="/list-subreddits" class="view-all">View All</a>
     </div>
 </div>
