--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,15 @@
 /* .content {
     margin-top: 100px;
 } */
+
+.header-wrapper {
+  height: 50px;
+  margin-bottom: 100px;
+  display: flex;
+}
+
+
+.app-header {
+  width: 100%;
+  display: flex;
+}
