--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="header-wrapper">
+  <app-header class="app-header"></app-header>
+</div>
+
+<router-outlet class="router-outlet"></router-outlet>
