--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
+
 input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
@@ -11,3 +13,5 @@ body {
     margin-top: 100px;
     height: 100%;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
