--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="header-wrapper">
-  <app-header class="app-header"></app-header>
+<div class="application">
+  <div class="header-wrapper">
+    <app-header class="app-header"></app-header>
+  </div>
+  <router-outlet class="router-outlet"></router-outlet>
 </div>
 
-<router-outlet class="router-outlet"></router-outlet>
