--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -19,7 +19,7 @@
       <ng-template #suffixIconSearch>
         <i nz-icon nzType="search"></i>
       </ng-template>
-      <nz-input-group [nzSuffix]="suffixIconSearch">
+      <nz-input-group class="search" [nzSuffix]="suffixIconSearch">
         <input type="text" nz-input placeholder="search" />
       </nz-input-group>
     </div>
