--- a/frontend/src/app/shared/vote-button/vote-button.component.css
+++ b/frontend/src/app/shared/vote-button/vote-button.component.css
@@ -1,31 +1,30 @@
-.votebox {
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    font-size: 1em;
+.vote-action {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  font-size: 1em;
 }
 
-.votesection{
-    margin:0px;
-    background-color: #ffffff;
+.up-vote,
+.down-vote {
+  font-size: 1.25em;
+  width: fit-content;
+  cursor: pointer;
 }
-.upvote,.downvote {
-    cursor: pointer;
-    border-radius: 2px solid;
-    padding: 5px 5px;
-}
-.upvote:hover {
+
+.up-vote:hover {
     background-color: #ccc;
     color: #008080;
 }
 
-
-.downvote:hover {
+.down-vote:hover {
   background-color: #ccc;
   color: #eb0303;
-
 }
 
-.votecount{
-    font-weight: bold;
+.vote-count{
+  margin: 8px 0;
+  font-weight: bold;
+  box-sizing: border-box;
 }
