--- a/frontend/src/app/shared/vote-button/vote-button.component.html
+++ b/frontend/src/app/shared/vote-button/vote-button.component.html
@@ -1,21 +1,14 @@
+<div class="vote-action">
+  <i class="up-vote"
+     [style.color]='upVoteColor'
+     (click)="upvotePost()"
+     nz-icon nzType="arrow-up"
+     nzTheme="outline"></i>
 
-    <div class="d-flex flex-column votebox">
-      <div class="p-2">
-        <fa-icon (click)="upvotePost()" class="upvote" [icon]="faArrowUp" [style.color]='upvoteColor'></fa-icon>
-        <div class="p-2 votecount">{{post.voteCount}}</div>
-        <fa-icon (click)="downvotePost()" class="downvote" [icon]="faArrowDown" [style.color]="downvoteColor"></fa-icon>
-      </div>
-
-<!--
-      <div class="p-2" *ngIf="voteStatus == 0">
-        <fa-icon (click)="upvotePost()" class="upvote" [icon]="faArrowUp" [style.color]='upvoteColor'></fa-icon>
-        <div class="p-2 votecount">{{post.voteCount}}</div>
-        <fa-icon (click)="downvotePost()" class="downvote" [icon]="faArrowDown" [style.color]="downvoteColor"></fa-icon>
-      </div>
-
-      <div class="p-2" *ngIf="voteStatus == -1">
-        <fa-icon (click)="upvotePost()" class="upvote" [icon]="faArrowUp" [style.color]='upvoteColor'></fa-icon>
-        <div class="p-2 votecount">{{post.voteCount}}</div>
-        <fa-icon (click)="downvotePost()" class="downvote" [icon]="faArrowDown" [style.color]='red'></fa-icon>
-      </div> -->
-    </div>
+  <div class="vote-count">{{post.voteCount}}</div>
+  <i class="down-vote"
+     [style.color]="downVoteColor"
+     (click)="downVotePost()"
+     nz-icon nzType="arrow-down"
+     nzTheme="outline"></i>
+</div>
