--- a/frontend/src/app/post/post-overview/post-overview.component.css
+++ b/frontend/src/app/post/post-overview/post-overview.component.css
@@ -7,16 +7,16 @@
   color: #878A8C;
   position: relative;
   border-radius: 4px;
-  padding: 5px 0px 5px 0px;
 }
 
 .body {
-  padding-left: 8px;
+  padding: 5px 8px;
+  background: #FFF;
 }
 
 .vote-post {
   background: #F7F9FA;
-  margin: 8px 0;
+  padding: 8px 0;
 }
 
 .meta-information {
